--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -148,3 +148,60 @@ margin-bottom: 30px;
 .inspiration-vedio p{
   font-size: 16px;
 }
+/*current target*/
+.current-target{
+  width: 1140px;
+  margin-top: 100px;
+  margin-left: 247px;
+
+}
+
+.target-title{
+  text-align: center;
+  margin-bottom: 50px;
+}
+.target-parts{
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.target-title h2{
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 18px;
+}
+
+.target-title p{
+  font-size: 16px;
+
+}
+
+.skills{
+  text-align: center;
+}
+.skill-1{
+  width: 360px;
+    background-color: rgba(255, 76, 30, 0.05);
+    padding: 40px;
+    border-radius: 16px;
+}
+.skill-2{
+  width: 360px;
+    background-color:rgba(0, 76, 232, 0.05);
+    padding: 40px;
+    border-radius: 16px;
+}
+.skill-3{
+  width: 360px;
+    background-color:rgba(255, 223, 0, 0.05);
+    padding: 40px;
+    border-radius: 16px;
+}
+
+.submission h2{
+  text-align: end;
+  margin-right: 100px;
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
